--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["passwordManager/src/App.css"],"fileToBeOpened":"passwordManager/src/App.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["passwordManager/src/components/PasswordItem/index.css","passwordManager/src/components/PasswordManager/index.js","passwordManager/src/components/PasswordManager/index.css","passwordManager/src/App.js","passwordManager/src/App.css"],"fileToBeOpened":"passwordManager/src/components/PasswordItem/index.js"}
